cargo-features = ["strip"]

[package]
name = "ggl"
version = "0.1.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
strip = true
# opt-level = "z"
# panic = "abort"

[dependencies]
anyhow = "1.0.38"
bytemuck = "1.5.1"
glam = "0.12.0"
glfw = "0.41.0"
glow = "0.7.2"
image = { version = "0.23.13", default-features=false, features = ["jpeg", "jpeg_rayon", "png"]}
